vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonTwoEmptyCodeElmsSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPqW9Gv6vxxUcHBBMicjRsNP/qdtO0kh1+ivd45Tyrdx7R6G9JB+9QK2LZxKQeIuCmQxIUmAg
aecfWwGCmN80AJOKtKXHjWkce5n6d+d3FYi92bMpltSgq043vGCgHMYb9kC5cTiTqQHPCOLmi+bc
tBZn3a8B2PrgFmiLEFXa7HSDhhXGUCRqcYRwDhPOnGK/oHZNcVSk0lfvscHq+CHrcVk4pLbgGGcc
MiINM2svf8eGPXvEwBq5fXQ17QqFdVMbtnQvt+A3mRNhhFUazjL06gBQo9jZQ1GXYqI3D8e/sm2F
PtLxFVar+F791e9baA9667Jml5UW/8/Vxd/44LKMy2moxq8+TH/SyHcrjXZppvH4CPIvN4R3nf3w
ihxZs7j8uKdn6CN52w81cINsRg4vLVk+HWQGstr7OC7AGr9oA/r1dmtdfZZmEwpKl3GL4a+clDFG
8h5B4QWtJHX6MVAJ2VGpA0CJ7szPVt3vcluc2h/LvelJAzvYVOT5CNWsLCvI7BQCM31ew/kPsck3
9KtrpDlBRBmSUBuhrIxWhgJezGAWa4J2OKn5c3XFZEec2TxCSRLc4evmZow3vZwFzxXqjdNNeExC
nngNi2ueTLcK5OIN8Sw8pWaDml9OVjhfN7sTKZG52Qf+v/G0//ySbs205YpqNM335iXrt7utCFRh
YZf501tPnpGivCRPHUDq0GpOphvkV4huVj2fHUAd7x4NuUvxFd92aj2eLotMZ6qdVqzGlOctr/El
d4B0bX4LBKIETUMFDXLCCGs3pGrr/rgRUNpMq0P1/x1JfnNPLEBfv1duvOTMXARCRIsO1SY9ZOa4
BFFpxwodpvLDkhsGR5HVi7Sx0dLr8lNAIrjAVpi49DO7gbPBSi21XG16bFjFUCOthX3NiHZhbVCv
qqrxjLHBkRECw9bId53OjV7ZqanS0Wj5xQh08zOu96AMRLlYN94Lx0tj5WQouhMcZTQO2VP5WR1J
PZuXcV3tTM1Exp1UUOqTs5DHaSELjnyuISWzOV6Aq2R3ZmRHWEpR7J3Gb3clh8mawuTBAHjiG4Up
AuwO+RnwB4YAbzeKIzTiYZeGf2qa/5HWwfJ36TRjWFnCi7FAH4R0D1SnXyJ+kPWXdU4wpqnvJmTQ
wXnmZV5uRR4YGlGpNHhqoaT4ulVl4QkzvkH1lbjLutT7QvCexHcCDnQk5chOsku3+9vBQy6TrKPk
QAR+GM4qatRRwz8lrK0mNOGaixFRDP5foCos+xUM81Qh3c35unyHLD1f7guJdeudWZEG4cBsirhA
070+FfVDwOUcGgMG6RruNzwUEr8PtU0fw65GmonBCSnBwWOjTvruZBWmI632mnuwtypZcP7KkpKp
8JZy78gACKqivaObXMDFOmByb5K52qgb9LAZWWhTTBSxO68MAQr1YF4KXEV8SlqnuOcnCgQrBnd2
sf07G9kHlQ4N2Vf4bbTz0LDDprxQLVEj1Hp9dGCU6xEFneLCa5eR1jouc73xI9Z1CgXo9Khz6mnt
e2/admFKAozoiPEOJiL1sBIgh33PpR5uCn5ukCn6k+X1K3QZKOba+/T3Rl/Gs6mVa63uu68CaGuE
LchLOPkXIufZuwpWRCWaQD4vwqjD1YQrVUfjLTTMKxhbRFAwm05VEmtbhVkF2xls+bvx